projects/website-proxy/envoy.yaml
static_resources:
  listeners:
    - name: ingress_listener
      address:
        socket_address:
          # Envoy listens on 0.0.0.0 so Cloud Run can route external traffic to it
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': ://googleapis.com
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      '@type': ://googleapis.com
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match:
                            prefix: '/'
                          route:
                            cluster: app_backend
                            # Essential for Cloud Run to avoid timeout on long-lived connections
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': ://googleapis.com

  clusters:
    - name: app_backend
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: app_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # Routes traffic internally to your app container
                      address: 127.0.0.1
                      port_value: 8081
